--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <script src="https://kit.fontawesome.com/871e76e3a2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Liu+Jian+Mao+Cao&family=Lobster&family=Montserrat:wght@300;400;600;700&family=Mulish:wght@300;400;700&family=Open+Sans:ital,wght@0,400;0,700;1,600&family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Immo Agency</title>
   </head>
   <body>
     <div id="root"></div>
